--- a/Work_Portfolio.html
+++ b/Work_Portfolio.html
@@ -64,7 +64,14 @@
         
       </div>
 
-  </div>
+      <div class="grid-item">
+       <a href="doc/Resume_(Yoseph _Alex) (Feedback).docx.pdf"> <img src="images/resume.png"></a>
+
+  
+          
+      </div>
+
+    </div>
   
 
 <footer>
